commit translated contents

--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.tablecolumnloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.tablecolumnloadoptions.yml
@@ -1,110 +1,114 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions:interface'
-    summary: |-
-      代表表格中的一列。
+### YamlMime:TSType
+name: Excel.Interfaces.TableColumnLoadOptions
+uid: excel!Excel.Interfaces.TableColumnLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.TableColumnLoadOptions
+summary: >-
+  代表表格中的一列。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.TableColumnLoadOptions
-    fullName: Excel.Interfaces.TableColumnLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.TableColumnLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.TableColumnLoadOptions#filter:member'
-      - 'excel!Excel.Interfaces.TableColumnLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.TableColumnLoadOptions#index:member'
-      - 'excel!Excel.Interfaces.TableColumnLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.TableColumnLoadOptions#values:member'
-  - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#filter:member'
-    summary: |-
-      检索应用于列的筛选器。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: filter
-    fullName: filter
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'filter?: Excel.Interfaces.FilterLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.FilterLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#id:member'
-    summary: |-
-      返回标识表内的列的唯一键。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.TableColumnLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: filter
+  uid: excel!Excel.Interfaces.TableColumnLoadOptions#filter:member
+  package: excel!
+  fullName: filter
+  summary: >-
+    检索应用于列的筛选器。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#index:member'
-    summary: |-
-      返回表的列集合内列的索引编号。 从零开始编制索引。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: index
-    fullName: index
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'index?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#name:member'
-    summary: |-
-      指定表格列的名称。
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'filter?: Excel.Interfaces.FilterLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.FilterLoadOptions:interface" />
+- name: id
+  uid: excel!Excel.Interfaces.TableColumnLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    返回标识表内的列的唯一键。
 
-      \[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.TableColumnLoadOptions#values:member'
-    summary: |-
-      表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: values
-    fullName: values
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'values?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.FilterLoadOptions:interface'
-    name: Excel.Interfaces.FilterLoadOptions
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: index
+  uid: excel!Excel.Interfaces.TableColumnLoadOptions#index:member
+  package: excel!
+  fullName: index
+  summary: >-
+    返回表的列集合内列的索引编号。 从零开始编制索引。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'index?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.TableColumnLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    指定表格列的名称。
+
+
+    \[[API 集： ExcelApi 1.1 用于获取名称; 1.4 用于设置名称。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: values
+  uid: excel!Excel.Interfaces.TableColumnLoadOptions#values:member
+  package: excel!
+  fullName: values
+  summary: >-
+    表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'values?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: cbd69c116413187d835dc4cfb62fe23f4826b563
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189674"
