--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.filtercriteria.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.filtercriteria.yml
@@ -1,188 +1,153 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.FilterCriteria:interface'
-    summary: |-
-      表示应用于列的筛选条件。
+### YamlMime:TSType
+name: Excel.FilterCriteria
+uid: excel!Excel.FilterCriteria:interface
+package: excel!
+fullName: Excel.FilterCriteria
+summary: >-
+  表示应用于列的筛选条件。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.FilterCriteria
-    fullName: Excel.FilterCriteria
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.FilterCriteria#color:member'
-      - 'excel!Excel.FilterCriteria#criterion1:member'
-      - 'excel!Excel.FilterCriteria#criterion2:member'
-      - 'excel!Excel.FilterCriteria#dynamicCriteria:member'
-      - 'excel!Excel.FilterCriteria#filterOn:member'
-      - 'excel!Excel.FilterCriteria#icon:member'
-      - 'excel!Excel.FilterCriteria#operator:member'
-      - 'excel!Excel.FilterCriteria#values:member'
-  - uid: 'excel!Excel.FilterCriteria#color:member'
-    summary: |-
-      用于筛选单元格的 HTML 颜色字符串。 与“cellColor”和“fontColor”筛选一起使用。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: color
-    fullName: color
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'color?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.FilterCriteria#criterion1:member'
-    summary: |-
-      第一个条件用于筛选数据。 在“自定义”筛选中用作运算符。 例如 "<!-- -->&gt;<!-- -->50 "的数字大于50或" = * s "（表示以" s "结尾的值）。
+  \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: color
+  uid: excel!Excel.FilterCriteria#color:member
+  package: excel!
+  fullName: color
+  summary: >-
+    用于筛选单元格的 HTML 颜色字符串。 与“cellColor”和“fontColor”筛选一起使用。
 
-      在 top/底端项目/百分比的情况下使用（如果将 "开启" 设置为 "topItems"，则为前5项）使用的数字（例如，"5"）。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: criterion1
-    fullName: criterion1
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'criterion1?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.FilterCriteria#criterion2:member'
-    summary: |-
-      第二个条件用于筛选数据。 在“自定义”筛选中仅用作运算符。
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'color?: string;'
+    return:
+      type: string
+- name: criterion1
+  uid: excel!Excel.FilterCriteria#criterion1:member
+  package: excel!
+  fullName: criterion1
+  summary: >-
+    第一个条件用于筛选数据。 在“自定义”筛选中用作运算符。 例如 "<!-- -->&gt;<!-- -->50 "的数字大于50或" = * s "（表示以" s "结尾的值）。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: criterion2
-    fullName: criterion2
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'criterion2?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.FilterCriteria#dynamicCriteria:member'
-    summary: |-
-      Excel.DynamicFilterCriteria 集中的动态条件将应用于此列。 与“动态”筛选一起使用。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: dynamicCriteria
-    fullName: dynamicCriteria
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'dynamicCriteria?: Excel.DynamicFilterCriteria | "Unknown" | "AboveAverage" | "AllDatesInPeriodApril" | "AllDatesInPeriodAugust" | "AllDatesInPeriodDecember" | "AllDatesInPeriodFebruray" | "AllDatesInPeriodJanuary" | "AllDatesInPeriodJuly" | "AllDatesInPeriodJune" | "AllDatesInPeriodMarch" | "AllDatesInPeriodMay" | "AllDatesInPeriodNovember" | "AllDatesInPeriodOctober" | "AllDatesInPeriodQuarter1" | "AllDatesInPeriodQuarter2" | "AllDatesInPeriodQuarter3" | "AllDatesInPeriodQuarter4" | "AllDatesInPeriodSeptember" | "BelowAverage" | "LastMonth" | "LastQuarter" | "LastWeek" | "LastYear" | "NextMonth" | "NextQuarter" | "NextWeek" | "NextYear" | "ThisMonth" | "ThisQuarter" | "ThisWeek" | "ThisYear" | "Today" | "Tomorrow" | "YearToDate" | "Yesterday";'
-      return:
-        type:
-          - 'excel!Excel.FilterCriteria#dynamicCriteria~0:complex'
-  - uid: 'excel!Excel.FilterCriteria#filterOn:member'
-    summary: |-
-      筛选器使用的属性，用于确定是否应将值保持为可见时。
+    在 top/底端项目/百分比的情况下用作数字 (例如，如果将 "topItems" 设置为 "5"，则将前5个项目设置为 "" ) 。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: filterOn
-    fullName: filterOn
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'filterOn: Excel.FilterOn | "BottomItems" | "BottomPercent" | "CellColor" | "Dynamic" | "FontColor" | "Values" | "TopItems" | "TopPercent" | "Icon" | "Custom";'
-      return:
-        type:
-          - 'excel!Excel.FilterCriteria#filterOn~0:complex'
-  - uid: 'excel!Excel.FilterCriteria#icon:member'
-    summary: |-
-      用于筛选单元格的图标。 与“图标”筛选一起使用。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: icon
-    fullName: icon
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'icon?: Excel.Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.FilterCriteria#operator:member'
-    summary: |-
-      使用“自定义”筛选时，用于组合条件 1 和 2 的运算符。
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'criterion1?: string;'
+    return:
+      type: string
+- name: criterion2
+  uid: excel!Excel.FilterCriteria#criterion2:member
+  package: excel!
+  fullName: criterion2
+  summary: >-
+    第二个条件用于筛选数据。 在“自定义”筛选中仅用作运算符。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: operator
-    fullName: operator
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'operator?: Excel.FilterOperator | "And" | "Or";'
-      return:
-        type:
-          - 'excel!Excel.FilterCriteria#operator~0:complex'
-  - uid: 'excel!Excel.FilterCriteria#values:member'
-    summary: |-
-      一组用于“values”筛选器的值。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: values
-    fullName: values
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'values?: Array<string | FilterDatetime>;'
-      return:
-        type:
-          - 'excel!Excel.FilterCriteria#values~0:complex'
-references:
-  - uid: 'excel!Excel.FilterCriteria#dynamicCriteria~0:complex'
-    name: Excel.DynamicFilterCriteria | "Unknown" | "AboveAverage" | "AllDatesInPeriodApril" | "AllDatesInPeriodAugust" | "AllDatesInPeriodDecember" | "AllDatesInPeriodFebruray" | "AllDatesInPeriodJanuary" | "AllDatesInPeriodJuly" | "AllDatesInPeriodJune" | "AllDatesInPeriodMarch" | "AllDatesInPeriodMay" | "AllDatesInPeriodNovember" | "AllDatesInPeriodOctober" | "AllDatesInPeriodQuarter1" | "AllDatesInPeriodQuarter2" | "AllDatesInPeriodQuarter3" | "AllDatesInPeriodQuarter4" | "AllDatesInPeriodSeptember" | "BelowAverage" | "LastMonth" | "LastQuarter" | "LastWeek" | "LastYear" | "NextMonth" | "NextQuarter" | "NextWeek" | "NextYear" | "ThisMonth" | "ThisQuarter" | "ThisWeek" | "ThisYear" | "Today" | "Tomorrow" | "YearToDate" | "Yesterday"
-    fullName: Excel.DynamicFilterCriteria | "Unknown" | "AboveAverage" | "AllDatesInPeriodApril" | "AllDatesInPeriodAugust" | "AllDatesInPeriodDecember" | "AllDatesInPeriodFebruray" | "AllDatesInPeriodJanuary" | "AllDatesInPeriodJuly" | "AllDatesInPeriodJune" | "AllDatesInPeriodMarch" | "AllDatesInPeriodMay" | "AllDatesInPeriodNovember" | "AllDatesInPeriodOctober" | "AllDatesInPeriodQuarter1" | "AllDatesInPeriodQuarter2" | "AllDatesInPeriodQuarter3" | "AllDatesInPeriodQuarter4" | "AllDatesInPeriodSeptember" | "BelowAverage" | "LastMonth" | "LastQuarter" | "LastWeek" | "LastYear" | "NextMonth" | "NextQuarter" | "NextWeek" | "NextYear" | "ThisMonth" | "ThisQuarter" | "ThisWeek" | "ThisYear" | "Today" | "Tomorrow" | "YearToDate" | "Yesterday"
-    spec.typeScript:
-      - uid: 'excel!Excel.DynamicFilterCriteria:enum'
-        name: Excel.DynamicFilterCriteria
-        fullName: Excel.DynamicFilterCriteria
-      - name: ' | "Unknown" | "AboveAverage" | "AllDatesInPeriodApril" | "AllDatesInPeriodAugust" | "AllDatesInPeriodDecember" | "AllDatesInPeriodFebruray" | "AllDatesInPeriodJanuary" | "AllDatesInPeriodJuly" | "AllDatesInPeriodJune" | "AllDatesInPeriodMarch" | "AllDatesInPeriodMay" | "AllDatesInPeriodNovember" | "AllDatesInPeriodOctober" | "AllDatesInPeriodQuarter1" | "AllDatesInPeriodQuarter2" | "AllDatesInPeriodQuarter3" | "AllDatesInPeriodQuarter4" | "AllDatesInPeriodSeptember" | "BelowAverage" | "LastMonth" | "LastQuarter" | "LastWeek" | "LastYear" | "NextMonth" | "NextQuarter" | "NextWeek" | "NextYear" | "ThisMonth" | "ThisQuarter" | "ThisWeek" | "ThisYear" | "Today" | "Tomorrow" | "YearToDate" | "Yesterday"'
-        fullName: ' | "Unknown" | "AboveAverage" | "AllDatesInPeriodApril" | "AllDatesInPeriodAugust" | "AllDatesInPeriodDecember" | "AllDatesInPeriodFebruray" | "AllDatesInPeriodJanuary" | "AllDatesInPeriodJuly" | "AllDatesInPeriodJune" | "AllDatesInPeriodMarch" | "AllDatesInPeriodMay" | "AllDatesInPeriodNovember" | "AllDatesInPeriodOctober" | "AllDatesInPeriodQuarter1" | "AllDatesInPeriodQuarter2" | "AllDatesInPeriodQuarter3" | "AllDatesInPeriodQuarter4" | "AllDatesInPeriodSeptember" | "BelowAverage" | "LastMonth" | "LastQuarter" | "LastWeek" | "LastYear" | "NextMonth" | "NextQuarter" | "NextWeek" | "NextYear" | "ThisMonth" | "ThisQuarter" | "ThisWeek" | "ThisYear" | "Today" | "Tomorrow" | "YearToDate" | "Yesterday"'
-  - uid: 'excel!Excel.FilterCriteria#filterOn~0:complex'
-    name: Excel.FilterOn | "BottomItems" | "BottomPercent" | "CellColor" | "Dynamic" | "FontColor" | "Values" | "TopItems" | "TopPercent" | "Icon" | "Custom"
-    fullName: Excel.FilterOn | "BottomItems" | "BottomPercent" | "CellColor" | "Dynamic" | "FontColor" | "Values" | "TopItems" | "TopPercent" | "Icon" | "Custom"
-    spec.typeScript:
-      - uid: 'excel!Excel.FilterOn:enum'
-        name: Excel.FilterOn
-        fullName: Excel.FilterOn
-      - name: ' | "BottomItems" | "BottomPercent" | "CellColor" | "Dynamic" | "FontColor" | "Values" | "TopItems" | "TopPercent" | "Icon" | "Custom"'
-        fullName: ' | "BottomItems" | "BottomPercent" | "CellColor" | "Dynamic" | "FontColor" | "Values" | "TopItems" | "TopPercent" | "Icon" | "Custom"'
-  - uid: 'excel!Excel.Icon:interface'
-    name: Excel.Icon
-  - uid: 'excel!Excel.FilterCriteria#operator~0:complex'
-    name: Excel.FilterOperator | "And" | "Or"
-    fullName: Excel.FilterOperator | "And" | "Or"
-    spec.typeScript:
-      - uid: 'excel!Excel.FilterOperator:enum'
-        name: Excel.FilterOperator
-        fullName: Excel.FilterOperator
-      - name: ' | "And" | "Or"'
-        fullName: ' | "And" | "Or"'
-  - uid: 'excel!Excel.FilterCriteria#values~0:complex'
-    name: Array<string | FilterDatetime>
-    fullName: Array<string | Excel.FilterDatetime>
-    spec.typeScript:
-      - uid: '!Array:interface'
-        name: Array
-        fullName: Array
-      - name: '<string | '
-        fullName: '<string | '
-      - uid: 'excel!Excel.FilterDatetime:interface'
-        name: FilterDatetime
-        fullName: Excel.FilterDatetime
-      - name: '>'
-        fullName: '>'
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'criterion2?: string;'
+    return:
+      type: string
+- name: dynamicCriteria
+  uid: excel!Excel.FilterCriteria#dynamicCriteria:member
+  package: excel!
+  fullName: dynamicCriteria
+  summary: >-
+    Excel.DynamicFilterCriteria 集中的动态条件将应用于此列。 与“动态”筛选一起使用。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'dynamicCriteria?: Excel.DynamicFilterCriteria | "Unknown" | "AboveAverage" | "AllDatesInPeriodApril" | "AllDatesInPeriodAugust" | "AllDatesInPeriodDecember" | "AllDatesInPeriodFebruray" | "AllDatesInPeriodJanuary" | "AllDatesInPeriodJuly" | "AllDatesInPeriodJune" | "AllDatesInPeriodMarch" | "AllDatesInPeriodMay" | "AllDatesInPeriodNovember" | "AllDatesInPeriodOctober" | "AllDatesInPeriodQuarter1" | "AllDatesInPeriodQuarter2" | "AllDatesInPeriodQuarter3" | "AllDatesInPeriodQuarter4" | "AllDatesInPeriodSeptember" | "BelowAverage" | "LastMonth" | "LastQuarter" | "LastWeek" | "LastYear" | "NextMonth" | "NextQuarter" | "NextWeek" | "NextYear" | "ThisMonth" | "ThisQuarter" | "ThisWeek" | "ThisYear" | "Today" | "Tomorrow" | "YearToDate" | "Yesterday";'
+    return:
+      type: <xref uid="excel!Excel.DynamicFilterCriteria:enum" /> | "Unknown" | "AboveAverage" | "AllDatesInPeriodApril" | "AllDatesInPeriodAugust" | "AllDatesInPeriodDecember" | "AllDatesInPeriodFebruray" | "AllDatesInPeriodJanuary" | "AllDatesInPeriodJuly" | "AllDatesInPeriodJune" | "AllDatesInPeriodMarch" | "AllDatesInPeriodMay" | "AllDatesInPeriodNovember" | "AllDatesInPeriodOctober" | "AllDatesInPeriodQuarter1" | "AllDatesInPeriodQuarter2" | "AllDatesInPeriodQuarter3" | "AllDatesInPeriodQuarter4" | "AllDatesInPeriodSeptember" | "BelowAverage" | "LastMonth" | "LastQuarter" | "LastWeek" | "LastYear" | "NextMonth" | "NextQuarter" | "NextWeek" | "NextYear" | "ThisMonth" | "ThisQuarter" | "ThisWeek" | "ThisYear" | "Today" | "Tomorrow" | "YearToDate" | "Yesterday"
+- name: filterOn
+  uid: excel!Excel.FilterCriteria#filterOn:member
+  package: excel!
+  fullName: filterOn
+  summary: >-
+    筛选器使用的属性，用于确定是否应将值保持为可见时。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'filterOn: Excel.FilterOn | "BottomItems" | "BottomPercent" | "CellColor" | "Dynamic" | "FontColor" | "Values" | "TopItems" | "TopPercent" | "Icon" | "Custom";'
+    return:
+      type: <xref uid="excel!Excel.FilterOn:enum" /> | "BottomItems" | "BottomPercent" | "CellColor" | "Dynamic" | "FontColor" | "Values" | "TopItems" | "TopPercent" | "Icon" | "Custom"
+- name: icon
+  uid: excel!Excel.FilterCriteria#icon:member
+  package: excel!
+  fullName: icon
+  summary: >-
+    用于筛选单元格的图标。 与“图标”筛选一起使用。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'icon?: Excel.Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: operator
+  uid: excel!Excel.FilterCriteria#operator:member
+  package: excel!
+  fullName: operator
+  summary: >-
+    使用“自定义”筛选时，用于组合条件 1 和 2 的运算符。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'operator?: Excel.FilterOperator | "And" | "Or";'
+    return:
+      type: <xref uid="excel!Excel.FilterOperator:enum" /> | "And" | "Or"
+- name: values
+  uid: excel!Excel.FilterCriteria#values:member
+  package: excel!
+  fullName: values
+  summary: >-
+    一组用于“values”筛选器的值。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'values?: Array<string | FilterDatetime>;'
+    return:
+      type: Array&lt;string | <xref uid="excel!Excel.FilterDatetime:interface" />&gt;
+metadata:
+  ms.openlocfilehash: 2908b5ea1d55bc02b6f0d341fbce93270ee08f50
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49188337"
