--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charterrorbarsformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charterrorbarsformatupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface'
-    summary: '一个用于更新 ChartErrorBarsFormat 对象上的数据的接口，可用于`chartErrorBarsFormat.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartErrorBarsFormatUpdateData
-    fullName: Excel.Interfaces.ChartErrorBarsFormatUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ChartErrorBarsFormatUpdateData
+uid: excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartErrorBarsFormatUpdateData
+summary: 一个用于更新 ChartErrorBarsFormat 对象上的数据的接口，可用于 `chartErrorBarsFormat.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 29dc26aa6cd2a94f0697087c74d85e856e4eff25
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189478"
