--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.conditionalformatruledata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.conditionalformatruledata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleData:interface'
-    summary: 描述通过调用返回的数据的接口`conditionalFormatRule.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ConditionalFormatRuleData
-    fullName: Excel.Interfaces.ConditionalFormatRuleData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalFormatRuleData
+uid: excel!Excel.Interfaces.ConditionalFormatRuleData:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalFormatRuleData
+summary: 描述通过调用返回的数据的接口 `conditionalFormatRule.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 6a97296c1cb7639d581a91eb1e5b42d0785e3bf6
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189394"
