--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.rangecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.rangecollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`rangeCollection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.RangeCollectionData
-    fullName: Excel.Interfaces.RangeCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeCollectionData#items:member'
-  - uid: 'excel!Excel.Interfaces.RangeCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.RangeData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeCollectionData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.RangeCollectionData#items~0:complex'
-    name: 'Excel.Interfaces.RangeData[]'
-    fullName: 'Excel.Interfaces.RangeData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.RangeData:interface'
-        name: Excel.Interfaces.RangeData
-        fullName: Excel.Interfaces.RangeData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.RangeCollectionData
+uid: excel!Excel.Interfaces.RangeCollectionData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeCollectionData
+summary: 描述通过调用返回的数据的接口 `rangeCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.RangeCollectionData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.RangeData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeData:interface" />[]
+metadata:
+  ms.openlocfilehash: 64ca67c409092505f1c33afc653f89422d8b62c9
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189198"
