--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.worksheetloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.worksheetloadoptions.yml
@@ -1,146 +1,146 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
-    summary: |-
-      Excel 工作表是由单元格组成的网格。 它可以包含数据、表、图表等。若要了解有关工作表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-worksheets)<!-- -->.
+### YamlMime:TSType
+name: Excel.Interfaces.WorksheetLoadOptions
+uid: excel!Excel.Interfaces.WorksheetLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.WorksheetLoadOptions
+summary: >-
+  Excel 工作表是由单元格组成的网格。 它可以包含数据、表、图表等。若要了解有关工作表对象模型的详细信息，请参阅 [使用 Excel JAVASCRIPT API 处理工作表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-worksheets)<!-- -->.
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.WorksheetLoadOptions
-    fullName: Excel.Interfaces.WorksheetLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#charts:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#position:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#protection:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#tables:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#visibility:member'
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#charts:member'
-    summary: |-
-      返回作为工作表的一部分的图表的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: charts
-    fullName: charts
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'charts?: Excel.Interfaces.ChartCollectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#id:member'
-    summary: |-
-      返回用于唯一标识指定工作簿中工作表的值。 即使工作表被重命名或移动，标识符的值仍然相同。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: charts
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#charts:member
+  package: excel!
+  fullName: charts
+  summary: >-
+    返回作为工作表的一部分的图表的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#name:member'
-    summary: |-
-      工作表的显示名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#position:member'
-    summary: |-
-      工作表在工作簿中的位置，从零开始。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'charts?: Excel.Interfaces.ChartCollectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartCollectionLoadOptions:interface" />
+- name: id
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    返回用于唯一标识指定工作簿中工作表的值。 即使工作表被重命名或移动，标识符的值仍然相同。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#protection:member'
-    summary: |-
-      返回表工作表的工作表保护对象。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: protection
-    fullName: protection
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'protection?: Excel.Interfaces.WorksheetProtectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.WorksheetProtectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#tables:member'
-    summary: |-
-      属于工作表的表的集合。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    工作表的显示名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: tables
-    fullName: tables
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'tables?: Excel.Interfaces.TableCollectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.TableCollectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#visibility:member'
-    summary: |-
-      工作表的可见性。
 
-      \[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
-    name: visibility
-    fullName: visibility
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visibility?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
-    name: Excel.Interfaces.ChartCollectionLoadOptions
-  - uid: 'excel!Excel.Interfaces.WorksheetProtectionLoadOptions:interface'
-    name: Excel.Interfaces.WorksheetProtectionLoadOptions
-  - uid: 'excel!Excel.Interfaces.TableCollectionLoadOptions:interface'
-    name: Excel.Interfaces.TableCollectionLoadOptions
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    工作表在工作簿中的位置，从零开始。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: boolean;'
+    return:
+      type: boolean
+- name: protection
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#protection:member
+  package: excel!
+  fullName: protection
+  summary: >-
+    返回表工作表的工作表保护对象。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'protection?: Excel.Interfaces.WorksheetProtectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.WorksheetProtectionLoadOptions:interface" />
+- name: tables
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#tables:member
+  package: excel!
+  fullName: tables
+  summary: >-
+    属于工作表的表的集合。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'tables?: Excel.Interfaces.TableCollectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.TableCollectionLoadOptions:interface" />
+- name: visibility
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#visibility:member
+  package: excel!
+  fullName: visibility
+  summary: >-
+    工作表的可见性。
+
+
+    \[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visibility?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 2a0a678100197696177bd9d5c06ef7b7c2497fda
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189079"
