--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.threeflagsset.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.threeflagsset.yml
@@ -1,50 +1,54 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ThreeFlagsSet:interface'
-    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ThreeFlagsSet
-    fullName: Excel.ThreeFlagsSet
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.ThreeFlagsSet#greenFlag:member'
-      - 'excel!Excel.ThreeFlagsSet#redFlag:member'
-      - 'excel!Excel.ThreeFlagsSet#yellowFlag:member'
-  - uid: 'excel!Excel.ThreeFlagsSet#greenFlag:member'
-    name: greenFlag
-    fullName: greenFlag
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'greenFlag: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.ThreeFlagsSet#redFlag:member'
-    name: redFlag
-    fullName: redFlag
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'redFlag: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-  - uid: 'excel!Excel.ThreeFlagsSet#yellowFlag:member'
-    name: yellowFlag
-    fullName: yellowFlag
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'yellowFlag: Icon;'
-      return:
-        type:
-          - 'excel!Excel.Icon:interface'
-references:
-  - uid: 'excel!Excel.Icon:interface'
-    name: Icon
+### YamlMime:TSType
+name: Excel.ThreeFlagsSet
+uid: excel!Excel.ThreeFlagsSet:interface
+package: excel!
+fullName: Excel.ThreeFlagsSet
+summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: greenFlag
+  uid: excel!Excel.ThreeFlagsSet#greenFlag:member
+  package: excel!
+  fullName: greenFlag
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'greenFlag: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: redFlag
+  uid: excel!Excel.ThreeFlagsSet#redFlag:member
+  package: excel!
+  fullName: redFlag
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'redFlag: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+- name: yellowFlag
+  uid: excel!Excel.ThreeFlagsSet#yellowFlag:member
+  package: excel!
+  fullName: yellowFlag
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'yellowFlag: Icon;'
+    return:
+      type: <xref uid="excel!Excel.Icon:interface" />
+metadata:
+  ms.openlocfilehash: 08f97edfb7ac57185f9056c02d6f23e90bf7a096
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189058"
