--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartupdatedata.yml
@@ -1,182 +1,178 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData:interface'
-    summary: '一个接口，用于更新 Chart 对象上的数据，以供在`chart.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.ChartUpdateData
-    fullName: Excel.Interfaces.ChartUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartUpdateData#axes:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#dataLabels:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#format:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#height:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#left:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#legend:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#name:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#title:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#top:member'
-      - 'excel!Excel.Interfaces.ChartUpdateData#width:member'
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#axes:member'
-    summary: |-
-      表示图表坐标轴。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartUpdateData
+uid: excel!Excel.Interfaces.ChartUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartUpdateData
+summary: 一个接口，用于更新 Chart 对象上的数据，以供在 `chart.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: axes
+  uid: excel!Excel.Interfaces.ChartUpdateData#axes:member
+  package: excel!
+  fullName: axes
+  summary: >-
+    表示图表坐标轴。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: axes
-    fullName: axes
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'axes?: Excel.Interfaces.ChartAxesUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAxesUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#dataLabels:member'
-    summary: |-
-      表示图表上的数据标签。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: dataLabels
-    fullName: dataLabels
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'dataLabels?: Excel.Interfaces.ChartDataLabelsUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartDataLabelsUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#format:member'
-    summary: |-
-      封装图表区域的格式属性。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'axes?: Excel.Interfaces.ChartAxesUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAxesUpdateData:interface" />
+- name: dataLabels
+  uid: excel!Excel.Interfaces.ChartUpdateData#dataLabels:member
+  package: excel!
+  fullName: dataLabels
+  summary: >-
+    表示图表上的数据标签。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartAreaFormatUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#height:member'
-    summary: |-
-      指定 chart 对象的高度（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#left:member'
-    summary: |-
-      从图表左侧到工作表原点的距离，以磅值表示。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'dataLabels?: Excel.Interfaces.ChartDataLabelsUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartDataLabelsUpdateData:interface" />
+- name: format
+  uid: excel!Excel.Interfaces.ChartUpdateData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    封装图表区域的格式属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#legend:member'
-    summary: |-
-      表示图表的图例。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: legend
-    fullName: legend
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'legend?: Excel.Interfaces.ChartLegendUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#name:member'
-    summary: |-
-      指定 chart 对象的名称。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartAreaFormatUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface" />
+- name: height
+  uid: excel!Excel.Interfaces.ChartUpdateData#height:member
+  package: excel!
+  fullName: height
+  summary: >-
+    指定 chart 对象的高度（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#title:member'
-    summary: |-
-      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: title
-    fullName: title
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'title?: Excel.Interfaces.ChartTitleUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#top:member'
-    summary: |-
-      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: number;'
+    return:
+      type: number
+- name: left
+  uid: excel!Excel.Interfaces.ChartUpdateData#left:member
+  package: excel!
+  fullName: left
+  summary: >-
+    从图表左侧到工作表原点的距离，以磅值表示。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.ChartUpdateData#width:member'
-    summary: |-
-      指定 chart 对象的宽度（以磅为单位）。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: number;'
-      return:
-        type:
-          - number
-references:
-  - uid: 'excel!Excel.Interfaces.ChartAxesUpdateData:interface'
-    name: Excel.Interfaces.ChartAxesUpdateData
-  - uid: 'excel!Excel.Interfaces.ChartDataLabelsUpdateData:interface'
-    name: Excel.Interfaces.ChartDataLabelsUpdateData
-  - uid: 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
-    name: Excel.Interfaces.ChartAreaFormatUpdateData
-  - uid: 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
-    name: Excel.Interfaces.ChartLegendUpdateData
-  - uid: 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
-    name: Excel.Interfaces.ChartTitleUpdateData
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: number;'
+    return:
+      type: number
+- name: legend
+  uid: excel!Excel.Interfaces.ChartUpdateData#legend:member
+  package: excel!
+  fullName: legend
+  summary: >-
+    表示图表的图例。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'legend?: Excel.Interfaces.ChartLegendUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartLegendUpdateData:interface" />
+- name: name
+  uid: excel!Excel.Interfaces.ChartUpdateData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    指定 chart 对象的名称。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: title
+  uid: excel!Excel.Interfaces.ChartUpdateData#title:member
+  package: excel!
+  fullName: title
+  summary: >-
+    指定指定图表的标题，包括文本、可见性、位置和标题的格式。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'title?: Excel.Interfaces.ChartTitleUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartTitleUpdateData:interface" />
+- name: top
+  uid: excel!Excel.Interfaces.ChartUpdateData#top:member
+  package: excel!
+  fullName: top
+  summary: >-
+    指定一个距离，以磅为单位，从工作表上的第1行顶部 (工作) 表上，或图表) 上的图表区 (顶部的距离（以磅为单位）。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: number;'
+    return:
+      type: number
+- name: width
+  uid: excel!Excel.Interfaces.ChartUpdateData#width:member
+  package: excel!
+  fullName: width
+  summary: >-
+    指定 chart 对象的宽度（以磅为单位）。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: number;'
+    return:
+      type: number
+metadata:
+  ms.openlocfilehash: fed80a77f3074f557b395817a05bf8fccaa52688
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49188848"
