--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.rangeupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.rangeupdatedata.yml
@@ -1,142 +1,146 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData:interface'
-    summary: '一个用于更新 Range 对象上的数据的接口，可用于`range.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.RangeUpdateData
-    fullName: Excel.Interfaces.RangeUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.RangeUpdateData#columnHidden:member'
-      - 'excel!Excel.Interfaces.RangeUpdateData#format:member'
-      - 'excel!Excel.Interfaces.RangeUpdateData#formulas:member'
-      - 'excel!Excel.Interfaces.RangeUpdateData#formulasLocal:member'
-      - 'excel!Excel.Interfaces.RangeUpdateData#formulasR1C1:member'
-      - 'excel!Excel.Interfaces.RangeUpdateData#numberFormat:member'
-      - 'excel!Excel.Interfaces.RangeUpdateData#rowHidden:member'
-      - 'excel!Excel.Interfaces.RangeUpdateData#values:member'
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData#columnHidden:member'
-    summary: |-
-      表示当前区域中的所有列是否隐藏。
+### YamlMime:TSType
+name: Excel.Interfaces.RangeUpdateData
+uid: excel!Excel.Interfaces.RangeUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.RangeUpdateData
+summary: 一个用于更新 Range 对象上的数据的接口，可用于 `range.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: columnHidden
+  uid: excel!Excel.Interfaces.RangeUpdateData#columnHidden:member
+  package: excel!
+  fullName: columnHidden
+  summary: >-
+    表示当前区域中的所有列是否隐藏。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: columnHidden
-    fullName: columnHidden
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'columnHidden?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData#format:member'
-    summary: |-
-      返回一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.RangeFormatUpdateData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.RangeFormatUpdateData:interface'
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData#formulas:member'
-    summary: |-
-      表示采用 A1 表示法的公式。
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'columnHidden?: boolean;'
+    return:
+      type: boolean
+- name: format
+  uid: excel!Excel.Interfaces.RangeUpdateData#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    返回一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulas
-    fullName: formulas
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulas?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData#formulasLocal:member'
-    summary: |-
-      表示采用 A1 表示法的公式，使用用户语言和数字格式区域设置。例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中变为 "=SUMME(A1; 1,5)"。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulasLocal
-    fullName: formulasLocal
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulasLocal?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData#formulasR1C1:member'
-    summary: |-
-      表示采用 R1C1 样式表示法的公式。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.RangeFormatUpdateData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.RangeFormatUpdateData:interface" />
+- name: formulas
+  uid: excel!Excel.Interfaces.RangeUpdateData#formulas:member
+  package: excel!
+  fullName: formulas
+  summary: >-
+    表示采用 A1 表示法的公式。 如果单元格没有公式，则改为返回它的值。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulasR1C1
-    fullName: formulasR1C1
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulasR1C1?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData#numberFormat:member'
-    summary: |-
-      表示给定范围的 Excel 数字格式代码。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: numberFormat
-    fullName: numberFormat
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'numberFormat?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData#rowHidden:member'
-    summary: |-
-      表示当前区域中的所有行是否隐藏。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulas?: any[][];'
+    return:
+      type: any[][]
+- name: formulasLocal
+  uid: excel!Excel.Interfaces.RangeUpdateData#formulasLocal:member
+  package: excel!
+  fullName: formulasLocal
+  summary: >-
+    表示采用 A1 样式表示法的公式，使用用户的语言和数字格式区域设置。 例如，英语中的公式 "=SUM(A1, 1.5)" 在德语中将变为 "=SUMME(A1; 1,5)"。 如果单元格没有公式，则改为返回它的值。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: rowHidden
-    fullName: rowHidden
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'rowHidden?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.RangeUpdateData#values:member'
-    summary: |-
-      表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: values
-    fullName: values
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'values?: any[][];'
-      return:
-        type:
-          - 'any[][]'
-references:
-  - uid: 'excel!Excel.Interfaces.RangeFormatUpdateData:interface'
-    name: Excel.Interfaces.RangeFormatUpdateData
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulasLocal?: any[][];'
+    return:
+      type: any[][]
+- name: formulasR1C1
+  uid: excel!Excel.Interfaces.RangeUpdateData#formulasR1C1:member
+  package: excel!
+  fullName: formulasR1C1
+  summary: >-
+    表示采用 R1C1 样式表示法的公式。 如果单元格没有公式，则改为返回它的值。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulasR1C1?: any[][];'
+    return:
+      type: any[][]
+- name: numberFormat
+  uid: excel!Excel.Interfaces.RangeUpdateData#numberFormat:member
+  package: excel!
+  fullName: numberFormat
+  summary: >-
+    表示给定范围的 Excel 数字格式代码。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'numberFormat?: any[][];'
+    return:
+      type: any[][]
+- name: rowHidden
+  uid: excel!Excel.Interfaces.RangeUpdateData#rowHidden:member
+  package: excel!
+  fullName: rowHidden
+  summary: >-
+    表示当前区域中的所有行是否隐藏。
+
+
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'rowHidden?: boolean;'
+    return:
+      type: boolean
+- name: values
+  uid: excel!Excel.Interfaces.RangeUpdateData#values:member
+  package: excel!
+  fullName: values
+  summary: >-
+    表示指定区域的原始值。 返回的数据可能是字符串、数字，也可能是布尔值。 包含错误的单元格将返回错误字符串。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'values?: any[][];'
+    return:
+      type: any[][]
+metadata:
+  ms.openlocfilehash: e39b5d6d15ef4e8eb90925aa046e51efe1428682
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49188764"
