commit translated contents

--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.pivotlabelfilter.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.pivotlabelfilter.yml
@@ -1,120 +1,118 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.PivotLabelFilter:interface'
-    summary: |-
-      要应用于透视字段的标签筛选器的可配置模板。 定义为使 `condition` 筛选器能够正常工作而需要设置的条件。
+### YamlMime:TSType
+name: Excel.PivotLabelFilter
+uid: excel!Excel.PivotLabelFilter:interface
+package: excel!
+fullName: Excel.PivotLabelFilter
+summary: >-
+  要应用于透视字段的标签筛选器的可配置模板。 定义为使 `condition` 筛选器能够正常工作而需要设置的条件。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.PivotLabelFilter
-    fullName: Excel.PivotLabelFilter
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.PivotLabelFilter#comparator:member'
-      - 'excel!Excel.PivotLabelFilter#condition:member'
-      - 'excel!Excel.PivotLabelFilter#exclusive:member'
-      - 'excel!Excel.PivotLabelFilter#lowerBound:member'
-      - 'excel!Excel.PivotLabelFilter#substring:member'
-      - 'excel!Excel.PivotLabelFilter#upperBound:member'
-  - uid: 'excel!Excel.PivotLabelFilter#comparator:member'
-    summary: |-
-      比较运算符是其他值要与其进行比较的静态值。 比较的类型由条件定义。 注意：将数字字符串与其他数值字符串进行比较时，将其视为数字。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: comparator
-    fullName: comparator
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'comparator?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.PivotLabelFilter#condition:member'
-    summary: |-
-      指定筛选器的条件，该条件定义了必要的筛选条件。
+  \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: comparator
+  uid: excel!Excel.PivotLabelFilter#comparator:member
+  package: excel!
+  fullName: comparator
+  summary: >-
+    比较运算符是其他值要与其进行比较的静态值。 比较的类型由条件定义。 注意：将数字字符串与其他数值字符串进行比较时，将其视为数字。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: condition
-    fullName: condition
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'condition: Excel.LabelFilterCondition | "Unknown" | "Equals" | "BeginsWith" | "EndsWith" | "Contains" | "GreaterThan" | "GreaterThanOrEqualTo" | "LessThan" | "LessThanOrEqualTo" | "Between";'
-      return:
-        type:
-          - 'excel!Excel.PivotLabelFilter#condition~0:complex'
-  - uid: 'excel!Excel.PivotLabelFilter#exclusive:member'
-    summary: |-
-      如果为 true，则筛选 *排除* 满足条件的项目。 默认值为 false (筛选器以包含满足条件) 的项目。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: exclusive
-    fullName: exclusive
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'exclusive?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.PivotLabelFilter#lowerBound:member'
-    summary: |-
-      筛选条件之间的范围的下限。 注意：将数字字符串与其他数值字符串进行比较时，将其视为数字。
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'comparator?: string;'
+    return:
+      type: string
+- name: condition
+  uid: excel!Excel.PivotLabelFilter#condition:member
+  package: excel!
+  fullName: condition
+  summary: >-
+    指定筛选器的条件，该条件定义了必要的筛选条件。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: lowerBound
-    fullName: lowerBound
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'lowerBound?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.PivotLabelFilter#substring:member'
-    summary: |-
-      用于的子字符串 `BeginsWith`<!-- -->, `EndsWith`<!-- -->和 `Contains` 筛选条件。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: substring
-    fullName: substring
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'substring?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.PivotLabelFilter#upperBound:member'
-    summary: |-
-      筛选条件之间的范围的上限。 注意：将数字字符串与其他数值字符串进行比较时，将其视为数字。
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'condition: Excel.LabelFilterCondition | "Unknown" | "Equals" | "BeginsWith" | "EndsWith" | "Contains" | "GreaterThan" | "GreaterThanOrEqualTo" | "LessThan" | "LessThanOrEqualTo" | "Between";'
+    return:
+      type: <xref uid="excel!Excel.LabelFilterCondition:enum" /> | "Unknown" | "Equals" | "BeginsWith" | "EndsWith" | "Contains" | "GreaterThan" | "GreaterThanOrEqualTo" | "LessThan" | "LessThanOrEqualTo" | "Between"
+- name: exclusive
+  uid: excel!Excel.PivotLabelFilter#exclusive:member
+  package: excel!
+  fullName: exclusive
+  summary: >-
+    如果为 true，则筛选 *排除* 满足条件的项目。 默认值为 false (筛选器以包含满足条件) 的项目。
 
-      \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: upperBound
-    fullName: upperBound
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'upperBound?: string;'
-      return:
-        type:
-          - string
-references:
-  - uid: 'excel!Excel.PivotLabelFilter#condition~0:complex'
-    name: Excel.LabelFilterCondition | "Unknown" | "Equals" | "BeginsWith" | "EndsWith" | "Contains" | "GreaterThan" | "GreaterThanOrEqualTo" | "LessThan" | "LessThanOrEqualTo" | "Between"
-    fullName: Excel.LabelFilterCondition | "Unknown" | "Equals" | "BeginsWith" | "EndsWith" | "Contains" | "GreaterThan" | "GreaterThanOrEqualTo" | "LessThan" | "LessThanOrEqualTo" | "Between"
-    spec.typeScript:
-      - uid: 'excel!Excel.LabelFilterCondition:enum'
-        name: Excel.LabelFilterCondition
-        fullName: Excel.LabelFilterCondition
-      - name: ' | "Unknown" | "Equals" | "BeginsWith" | "EndsWith" | "Contains" | "GreaterThan" | "GreaterThanOrEqualTo" | "LessThan" | "LessThanOrEqualTo" | "Between"'
-        fullName: ' | "Unknown" | "Equals" | "BeginsWith" | "EndsWith" | "Contains" | "GreaterThan" | "GreaterThanOrEqualTo" | "LessThan" | "LessThanOrEqualTo" | "Between"'
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'exclusive?: boolean;'
+    return:
+      type: boolean
+- name: lowerBound
+  uid: excel!Excel.PivotLabelFilter#lowerBound:member
+  package: excel!
+  fullName: lowerBound
+  summary: >-
+    筛选条件之间的范围的下限。 注意：将数字字符串与其他数值字符串进行比较时，将其视为数字。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'lowerBound?: string;'
+    return:
+      type: string
+- name: substring
+  uid: excel!Excel.PivotLabelFilter#substring:member
+  package: excel!
+  fullName: substring
+  summary: >-
+    用于的子字符串 `BeginsWith`<!-- -->, `EndsWith`<!-- -->和 `Contains` 筛选条件。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'substring?: string;'
+    return:
+      type: string
+- name: upperBound
+  uid: excel!Excel.PivotLabelFilter#upperBound:member
+  package: excel!
+  fullName: upperBound
+  summary: >-
+    筛选条件之间的范围的上限。 注意：将数字字符串与其他数值字符串进行比较时，将其视为数字。
+
+
+    \[[API 集： ExcelApi 1.12](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'upperBound?: string;'
+    return:
+      type: string
+metadata:
+  ms.openlocfilehash: 863795d3230f945e16687d32725b70261ae29db1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49190248"
