--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.stylecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.stylecollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.StyleCollectionUpdateData:interface'
-    summary: '一个用于更新 StyleCollection 对象上的数据的接口，可用于`styleCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.StyleCollectionUpdateData
-    fullName: Excel.Interfaces.StyleCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.StyleCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.StyleCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.StyleData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.StyleCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.StyleCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.StyleData[]'
-    fullName: 'Excel.Interfaces.StyleData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.StyleData:interface'
-        name: Excel.Interfaces.StyleData
-        fullName: Excel.Interfaces.StyleData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.StyleCollectionUpdateData
+uid: excel!Excel.Interfaces.StyleCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.StyleCollectionUpdateData
+summary: 一个用于更新 StyleCollection 对象上的数据的接口，可用于 `styleCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.StyleCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.StyleData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.StyleData:interface" />[]
+metadata:
+  ms.openlocfilehash: 24450fbbec39a6bf8bf406c0018d68c947e51ac6
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189828"
