--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.conditionalformatruleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.interfaces.conditionalformatruleloadoptions.yml
@@ -1,75 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions:interface'
-    summary: |-
-      表示适用于所有传统规则/格式配对的规则。
+### YamlMime:TSType
+name: Excel.Interfaces.ConditionalFormatRuleLoadOptions
+uid: excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ConditionalFormatRuleLoadOptions
+summary: >-
+  表示适用于所有传统规则/格式配对的规则。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ConditionalFormatRuleLoadOptions
-    fullName: Excel.Interfaces.ConditionalFormatRuleLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formula:member'
-      - 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaLocal:member'
-      - 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaR1C1:member'
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formula:member'
-    summary: |-
-      如果需要，公式可对条件格式规则进行求值。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formula
-    fullName: formula
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formula?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaLocal:member'
-    summary: |-
-      如果需要，公式可采用用户的语言对条件格式规则进行求值。
+  \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: formula
+  uid: excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formula:member
+  package: excel!
+  fullName: formula
+  summary: >-
+    如果需要，公式可对条件格式规则进行求值。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulaLocal
-    fullName: formulaLocal
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulaLocal?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaR1C1:member'
-    summary: |-
-      如果需要，公式可采用 R1C1 表示法对条件格式规则进行求值。
 
-      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: formulaR1C1
-    fullName: formulaR1C1
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'formulaR1C1?: boolean;'
-      return:
-        type:
-          - boolean
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formula?: boolean;'
+    return:
+      type: boolean
+- name: formulaLocal
+  uid: excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaLocal:member
+  package: excel!
+  fullName: formulaLocal
+  summary: >-
+    如果需要，公式可采用用户的语言对条件格式规则进行求值。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulaLocal?: boolean;'
+    return:
+      type: boolean
+- name: formulaR1C1
+  uid: excel!Excel.Interfaces.ConditionalFormatRuleLoadOptions#formulaR1C1:member
+  package: excel!
+  fullName: formulaR1C1
+  summary: >-
+    如果需要，公式可采用 R1C1 表示法对条件格式规则进行求值。
+
+
+    \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'formulaR1C1?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 4c2709e176b55a2330878d01d902a38168b0ccb4
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49190714"
