--- a/docs/docs-ref-autogen/excel_1_12/excel/excel.worksheetaddedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_12/excel/excel.worksheetaddedeventargs.yml
@@ -1,88 +1,71 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.WorksheetAddedEventArgs:interface'
-    summary: |-
-      提供有关引发添加的事件的工作表的信息。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.WorksheetAddedEventArgs
-    fullName: Excel.WorksheetAddedEventArgs
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.WorksheetAddedEventArgs#source:member'
-      - 'excel!Excel.WorksheetAddedEventArgs#type:member'
-      - 'excel!Excel.WorksheetAddedEventArgs#worksheetId:member'
-  - uid: 'excel!Excel.WorksheetAddedEventArgs#source:member'
-    summary: |-
-      获取事件源。 有关详细信息，请参阅 Excel.EventSource。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: source
-    fullName: source
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'source: Excel.EventSource | "Local" | "Remote";'
-      return:
-        type:
-          - 'excel!Excel.WorksheetAddedEventArgs#source~0:complex'
-  - uid: 'excel!Excel.WorksheetAddedEventArgs#type:member'
-    summary: |-
-      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: type
-    fullName: type
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'type: "WorksheetAdded";'
-      return:
-        type:
-          - '"WorksheetAdded"'
-  - uid: 'excel!Excel.WorksheetAddedEventArgs#worksheetId:member'
-    summary: |-
-      获取已添加至工作簿的工作表的 ID。
-
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: worksheetId
-    fullName: worksheetId
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'worksheetId: string;'
-      return:
-        type:
-          - string
-        description: |-
+### YamlMime:TSType
+name: Excel.WorksheetAddedEventArgs
+uid: excel!Excel.WorksheetAddedEventArgs:interface
+package: excel!
+fullName: Excel.WorksheetAddedEventArgs
+summary: >-
+  提供有关引发添加的事件的工作表的信息。
 
 
-          #### <a name="examples"></a>示例
+  \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: source
+  uid: excel!Excel.WorksheetAddedEventArgs#source:member
+  package: excel!
+  fullName: source
+  summary: >-
+    获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-          ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/30-events/events-workbook-and-worksheet-collection.yaml
-          async function onWorksheetAdd(event) {
-              await Excel.run(async (context) => {
-                  console.log(
-                      "Handler for worksheet onAdded event has been triggered. Newly added worksheet Id : " +
-                      event.worksheetId
-                  );
-              });
-          }
-          ```
-references:
-  - uid: 'excel!Excel.WorksheetAddedEventArgs#source~0:complex'
-    name: Excel.EventSource | "Local" | "Remote"
-    fullName: Excel.EventSource | "Local" | "Remote"
-    spec.typeScript:
-      - uid: 'excel!Excel.EventSource:enum'
-        name: Excel.EventSource
-        fullName: Excel.EventSource
-      - name: ' | "Local" | "Remote"'
-        fullName: ' | "Local" | "Remote"'
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'source: Excel.EventSource | "Local" | "Remote";'
+    return:
+      type: <xref uid="excel!Excel.EventSource:enum" /> | "Local" | "Remote"
+- name: type
+  uid: excel!Excel.WorksheetAddedEventArgs#type:member
+  package: excel!
+  fullName: type
+  summary: >-
+    获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'type: "WorksheetAdded";'
+    return:
+      type: "\"WorksheetAdded\""
+- name: worksheetId
+  uid: excel!Excel.WorksheetAddedEventArgs#worksheetId:member
+  package: excel!
+  fullName: worksheetId
+  summary: >-
+    获取已添加至工作簿的工作表的 ID。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'worksheetId: string;'
+    return:
+      type: string
+      description: "\n\n#### <a name=\"examples\"></a>示例\n\n```typescript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/30-events/events-workbook-and-worksheet-collection.yaml\nasync function onWorksheetAdd(event) {\n    await Excel.run(async (context) => {\n        console.log(\n            \"Handler for worksheet onAdded event has been triggered. Newly added worksheet Id : \" +\n            event.worksheetId\n        );\n    });\n}\n```"
+metadata:
+  ms.openlocfilehash: 311fd2526cbf8ecec427ef6446eddad622449cd6
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49190178"
