--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.chartlegendposition.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.chartlegendposition.yml
@@ -1,67 +1,45 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.ChartLegendPosition:enum'
-    summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
-    name: Excel.ChartLegendPosition
-    fullName: Excel.ChartLegendPosition
-    langs:
-      - typeScript
-    type: enum
-    package: excel!
-    children:
-      - 'excel!Excel.ChartLegendPosition.bottom:member'
-      - 'excel!Excel.ChartLegendPosition.corner:member'
-      - 'excel!Excel.ChartLegendPosition.custom:member'
-      - 'excel!Excel.ChartLegendPosition.invalid:member'
-      - 'excel!Excel.ChartLegendPosition.left:member'
-      - 'excel!Excel.ChartLegendPosition.right:member'
-      - 'excel!Excel.ChartLegendPosition.top:member'
-  - uid: 'excel!Excel.ChartLegendPosition.bottom:member'
-    name: bottom
-    fullName: bottom
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Bottom"'
-  - uid: 'excel!Excel.ChartLegendPosition.corner:member'
-    name: corner
-    fullName: corner
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Corner"'
-  - uid: 'excel!Excel.ChartLegendPosition.custom:member'
-    name: custom
-    fullName: custom
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Custom"'
-  - uid: 'excel!Excel.ChartLegendPosition.invalid:member'
-    name: invalid
-    fullName: invalid
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Invalid"'
-  - uid: 'excel!Excel.ChartLegendPosition.left:member'
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Left"'
-  - uid: 'excel!Excel.ChartLegendPosition.right:member'
-    name: right
-    fullName: right
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Right"'
-  - uid: 'excel!Excel.ChartLegendPosition.top:member'
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: field
-    numericValue: '"Top"'
+### YamlMime:TSEnum
+name: Excel.ChartLegendPosition
+uid: excel!Excel.ChartLegendPosition:enum
+package: excel!
+fullName: Excel.ChartLegendPosition
+summary: '\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+remarks: ''
+isPreview: false
+isDeprecated: false
+fields:
+- name: bottom
+  uid: excel!Excel.ChartLegendPosition.bottom:member
+  package: excel!
+  summary: ''
+- name: corner
+  uid: excel!Excel.ChartLegendPosition.corner:member
+  package: excel!
+  summary: ''
+- name: custom
+  uid: excel!Excel.ChartLegendPosition.custom:member
+  package: excel!
+  summary: ''
+- name: invalid
+  uid: excel!Excel.ChartLegendPosition.invalid:member
+  package: excel!
+  summary: ''
+- name: left
+  uid: excel!Excel.ChartLegendPosition.left:member
+  package: excel!
+  summary: ''
+- name: right
+  uid: excel!Excel.ChartLegendPosition.right:member
+  package: excel!
+  summary: ''
+- name: top
+  uid: excel!Excel.ChartLegendPosition.top:member
+  package: excel!
+  summary: ''
+metadata:
+  ms.openlocfilehash: b8411c31af7f05fc9d00b3648e28dafcabd50c1d
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49190024"
