--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.pivotfieldcollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.pivotfieldcollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotFieldCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`pivotFieldCollection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.PivotFieldCollectionData
-    fullName: Excel.Interfaces.PivotFieldCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotFieldCollectionData#items:member'
-  - uid: 'excel!Excel.Interfaces.PivotFieldCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.PivotFieldData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotFieldCollectionData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.PivotFieldCollectionData#items~0:complex'
-    name: 'Excel.Interfaces.PivotFieldData[]'
-    fullName: 'Excel.Interfaces.PivotFieldData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.PivotFieldData:interface'
-        name: Excel.Interfaces.PivotFieldData
-        fullName: Excel.Interfaces.PivotFieldData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.PivotFieldCollectionData
+uid: excel!Excel.Interfaces.PivotFieldCollectionData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotFieldCollectionData
+summary: 描述通过调用返回的数据的接口 `pivotFieldCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.PivotFieldCollectionData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.PivotFieldData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.PivotFieldData:interface" />[]
+metadata:
+  ms.openlocfilehash: aa84e8c13d0fc06ebc3cd2f240bb16b618d4faf3
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189954"
