--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.pivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.pivothierarchyupdatedata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyUpdateData:interface'
-    summary: '一个用于更新 PivotHierarchy 对象上的数据的接口，可用于`pivotHierarchy.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PivotHierarchyUpdateData
-    fullName: Excel.Interfaces.PivotHierarchyUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.PivotHierarchyUpdateData
+uid: excel!Excel.Interfaces.PivotHierarchyUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotHierarchyUpdateData
+summary: 一个用于更新 PivotHierarchy 对象上的数据的接口，可用于 `pivotHierarchy.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: 356fdc9378502b2a1887f340512569cffe434504
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189898"
