--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.pivotitemcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.pivotitemcollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotItemCollectionUpdateData:interface'
-    summary: '一个用于更新 PivotItemCollection 对象上的数据的接口，可用于`pivotItemCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PivotItemCollectionUpdateData
-    fullName: Excel.Interfaces.PivotItemCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotItemCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.PivotItemCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.PivotItemData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotItemCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.PivotItemCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.PivotItemData[]'
-    fullName: 'Excel.Interfaces.PivotItemData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.PivotItemData:interface'
-        name: Excel.Interfaces.PivotItemData
-        fullName: Excel.Interfaces.PivotItemData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.PivotItemCollectionUpdateData
+uid: excel!Excel.Interfaces.PivotItemCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotItemCollectionUpdateData
+summary: 一个用于更新 PivotItemCollection 对象上的数据的接口，可用于 `pivotItemCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.PivotItemCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.PivotItemData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.PivotItemData:interface" />[]
+metadata:
+  ms.openlocfilehash: c95bea6fd8cca3df395ac491e5d89e5e0a423e62
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189884"
