--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.stylecollectiondata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.stylecollectiondata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.StyleCollectionData:interface'
-    summary: 描述通过调用返回的数据的接口`styleCollection.toJSON()`<!-- -->.
-    name: Excel.Interfaces.StyleCollectionData
-    fullName: Excel.Interfaces.StyleCollectionData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.StyleCollectionData#items:member'
-  - uid: 'excel!Excel.Interfaces.StyleCollectionData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.StyleData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.StyleCollectionData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.StyleCollectionData#items~0:complex'
-    name: 'Excel.Interfaces.StyleData[]'
-    fullName: 'Excel.Interfaces.StyleData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.StyleData:interface'
-        name: Excel.Interfaces.StyleData
-        fullName: Excel.Interfaces.StyleData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.StyleCollectionData
+uid: excel!Excel.Interfaces.StyleCollectionData:interface
+package: excel!
+fullName: Excel.Interfaces.StyleCollectionData
+summary: 描述通过调用返回的数据的接口 `styleCollection.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.StyleCollectionData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.StyleData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.StyleData:interface" />[]
+metadata:
+  ms.openlocfilehash: 46b02d96ca5c4b5fa21fedd96cbeae54b904952c
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49189820"
